updated the README.md file to inclued datas that are used in the algorithm and included console based structure to print out similar books with possitive reviews

--- a/PageSeer.ipynb
+++ b/PageSeer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "id": "ec99f7c78180cf93",
    "metadata": {
     "ExecuteTime": {
@@ -119,7 +119,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f3c330fa-411d-4fc3-881f-a6499156ef3b",
+       "ref": "8874b29c-853a-4a26-9c94-e321374d8046",
        "rows": [
         [
          "0",
@@ -1065,7 +1065,7 @@
        "[212404 rows x 10 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "af8c0a47",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1147,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f4e51820-2344-4330-bba0-d969cb719e04",
+       "ref": "22098868-51b0-493b-9e90-3c1eba9f7029",
        "rows": [
         [
          "0",
@@ -1390,7 +1390,7 @@
        "4  The story for children 10 and up of St. Hyacin...  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,18 +1408,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "463e3f74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = CountVectorizer(stop_words = 'english')\n",
     "\n",
@@ -1439,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d6484031",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1446,7 @@
        "Name: Title, dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "3ce9f27d",
    "metadata": {},
    "outputs": [],
@@ -1546,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "id": "1596f16b",
    "metadata": {
     "ExecuteTime": {
@@ -1562,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "id": "a6998a9e",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1619,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "11d1182d-ae5b-4b51-8a5e-7950a1224954",
+       "ref": "0953632b-c49d-4591-9bf4-09c622f30ee1",
        "rows": [
         [
          "264037",
@@ -1831,7 +1823,7 @@
        "388818  Beautiufl coloring book. I bought these for my...  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "id": "900efe9b",
    "metadata": {
     "ExecuteTime": {
@@ -1913,7 +1905,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "28a98193-f16f-4267-ba89-baa6015e1e4c",
+       "ref": "881dc17e-d113-4176-8f9f-ed63cda105fc",
        "rows": [
         [
          "264037",
@@ -2117,7 +2109,7 @@
        "388818  Beautiufl coloring book. I bought these for my...  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "id": "eab2094c",
    "metadata": {
     "ExecuteTime": {
@@ -2146,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "id": "63f5bb70",
    "metadata": {
     "ExecuteTime": {
@@ -2169,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "id": "ede5d9d6",
    "metadata": {},
    "outputs": [
@@ -2194,7 +2186,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "65d5941b-2f0b-43b1-ac92-376521a21c91",
+       "ref": "cba98612-3001-4db5-9063-37bb8199292d",
        "rows": [
         [
          "0",
@@ -2566,7 +2558,7 @@
        "[19282 rows x 2 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2578,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "1a47c79a",
    "metadata": {},
    "outputs": [
@@ -2627,7 +2619,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c70ce86b-443f-43ab-a11e-238862ba8bba",
+       "ref": "84a4e202-b6dd-4354-aba5-6fc3ca03cb41",
        "rows": [
         [
          "0",
@@ -2978,7 +2970,7 @@
        "15  {'neg': 0.047, 'neu': 0.832, 'pos': 0.12, 'com...    0.9958          1  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2998,7 +2990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "9fea14a4",
    "metadata": {},
    "outputs": [
@@ -3038,7 +3030,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a9c62ea2-c44a-4ac6-b817-30883cc8dfa4",
+       "ref": "69c005d3-d724-45a9-86fe-3cec70b4f4b8",
        "rows": [
         [
          "412",
@@ -3389,7 +3381,7 @@
        "507   {'neg': 0.103, 'neu': 0.72, 'pos': 0.176, 'com...       1.0          1  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3432,7 +3424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "id": "df63ea00",
    "metadata": {},
    "outputs": [
@@ -3477,7 +3469,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "575a03bc-6972-4eb0-af11-09e737c6477f",
+       "ref": "4edfdbcc-af4d-409c-bc06-2575d7471157",
        "rows": [
         [
          "0",
@@ -4110,7 +4102,7 @@
        "[13815 rows x 6 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4126,7 +4118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "id": "b98d093a",
    "metadata": {},
    "outputs": [
@@ -4141,7 +4133,7 @@
        "Name: Title, dtype: object"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4152,7 +4144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "id": "c9366123",
    "metadata": {},
    "outputs": [],
@@ -4184,7 +4176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "id": "ab1143c4",
    "metadata": {},
    "outputs": [
@@ -4199,13 +4191,53 @@
        "Name: Title, dtype: object"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_best_book('Whispers of the Wicked Saints')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09357f95",
+   "metadata": {},
+   "source": [
+    "## b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5af7bb95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9531               When a Texan Gambles (The Wife Lottery)\n",
+      "10647                                       Healing H'Arts\n",
+      "4758                                     My Life in France\n",
+      "13580    It Will Live Forever: Traditional Yosemite Ind...\n",
+      "2669     Inconceivable: A Woman's Triumph over Despair ...\n",
+      "Name: Title, dtype: object\n",
+      "\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "  book_title = input(\"Enter a book title: or hit 'q' to quit\")\n",
+    "  if book_title == 'q':\n",
+    "    print(\"Goodbye!\")\n",
+    "    break\n",
+    "  print(get_best_book(book_title))\n",
+    "  print(\"\\n\")"
    ]
   }
  ],
